add change log for 0.2.7

--- a/notebooks/tutorials/adalflow_modelclient.ipynb
+++ b/notebooks/tutorials/adalflow_modelclient.ipynb
@@ -2059,85 +2059,93 @@
     "def analyze_single_image():\n",
     "    \"\"\"Example of analyzing a single image with GPT-4 Vision\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    gen = Generator(\n",
     "        model_client=client,\n",
     "        model_kwargs={\n",
     "            \"model\": \"gpt-4o-mini\",\n",
     "            \"images\": \"https://raw.githubusercontent.com/openai/openai-cookbook/main/examples/images/happy_cat.jpg\",\n",
-    "            \"max_tokens\": 300\n",
-    "        }\n",
+    "            \"max_tokens\": 300,\n",
+    "        },\n",
     "    )\n",
-    "    \n",
-    "    response = gen({\"input_str\": \"What do you see in this image? Be detailed but concise.\"})\n",
+    "\n",
+    "    response = gen(\n",
+    "        {\"input_str\": \"What do you see in this image? Be detailed but concise.\"}\n",
+    "    )\n",
     "    print(\"\\n=== Single Image Analysis ===\")\n",
     "    print(f\"Description: {response.raw_response}\")\n",
+    "\n",
     "\n",
     "def analyze_multiple_images():\n",
     "    \"\"\"Example of analyzing multiple images in one prompt\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    # List of images to analyze together\n",
     "    images = [\n",
     "        \"https://raw.githubusercontent.com/openai/openai-cookbook/main/examples/images/happy_cat.jpg\",\n",
-    "        \"https://raw.githubusercontent.com/openai/openai-cookbook/main/examples/images/sad_cat.jpg\"\n",
+    "        \"https://raw.githubusercontent.com/openai/openai-cookbook/main/examples/images/sad_cat.jpg\",\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    gen = Generator(\n",
     "        model_client=client,\n",
-    "        model_kwargs={\n",
-    "            \"model\": \"gpt-4o-mini\",\n",
-    "            \"images\": images,\n",
-    "            \"max_tokens\": 300\n",
+    "        model_kwargs={\"model\": \"gpt-4o-mini\", \"images\": images, \"max_tokens\": 300},\n",
+    "    )\n",
+    "\n",
+    "    response = gen(\n",
+    "        {\n",
+    "            \"input_str\": \"Compare and contrast these two images. What are the main differences?\"\n",
     "        }\n",
     "    )\n",
-    "    \n",
-    "    response = gen({\"input_str\": \"Compare and contrast these two images. What are the main differences?\"})\n",
     "    print(\"\\n=== Multiple Images Analysis ===\")\n",
     "    print(f\"Comparison: {response.raw_response}\")\n",
+    "\n",
     "\n",
     "def generate_art_with_dalle():\n",
     "    \"\"\"Example of generating art using DALL-E 3\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    gen = Generator(\n",
     "        model_client=client,\n",
     "        model_kwargs={\n",
     "            \"model\": \"dall-e-3\",\n",
     "            \"size\": \"1024x1024\",\n",
     "            \"quality\": \"standard\",\n",
-    "            \"n\": 1\n",
+    "            \"n\": 1,\n",
+    "        },\n",
+    "    )\n",
+    "\n",
+    "    response = gen(\n",
+    "        {\n",
+    "            \"input_str\": \"A serene Japanese garden with a small bridge over a koi pond, cherry blossoms falling gently in the breeze\"\n",
     "        }\n",
     "    )\n",
-    "    \n",
-    "    response = gen({\n",
-    "        \"input_str\": \"A serene Japanese garden with a small bridge over a koi pond, cherry blossoms falling gently in the breeze\"\n",
-    "    })\n",
     "    print(\"\\n=== Art Generation with DALL-E 3 ===\")\n",
     "    print(f\"Generated Image URL: {response.data}\")\n",
+    "\n",
     "\n",
     "def create_image_variations(image_path=\"path/to/your/image.jpg\"):\n",
     "    \"\"\"Example of creating variations of an existing image\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    gen = Generator(\n",
     "        model_client=client,\n",
     "        model_kwargs={\n",
     "            \"model\": \"dall-e-2\",\n",
     "            \"image\": image_path,\n",
     "            \"n\": 2,  # Generate 2 variations\n",
-    "            \"size\": \"1024x1024\"\n",
-    "        }\n",
+    "            \"size\": \"1024x1024\",\n",
+    "        },\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    response = gen({\"input_str\": \"\"})\n",
     "    print(\"\\n=== Image Variations ===\")\n",
     "    print(f\"Variation URLs: {response.data}\")\n",
     "\n",
+    "\n",
     "def edit_image_with_mask(image_path=\"path/to/image.jpg\", mask_path=\"path/to/mask.jpg\"):\n",
     "    \"\"\"Example of editing specific parts of an image using a mask\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    gen = Generator(\n",
     "        model_client=client,\n",
     "        model_kwargs={\n",
@@ -2145,40 +2153,37 @@
     "            \"image\": image_path,\n",
     "            \"mask\": mask_path,\n",
     "            \"n\": 1,\n",
-    "            \"size\": \"1024x1024\"\n",
-    "        }\n",
+    "            \"size\": \"1024x1024\",\n",
+    "        },\n",
     "    )\n",
-    "    \n",
-    "    response = gen({\n",
-    "        \"input_str\": \"Replace the masked area with a beautiful sunset\"\n",
-    "    })\n",
+    "\n",
+    "    response = gen({\"input_str\": \"Replace the masked area with a beautiful sunset\"})\n",
     "    print(\"\\n=== Image Editing ===\")\n",
     "    print(f\"Edited Image URL: {response.data}\")\n",
+    "\n",
     "\n",
     "def mixed_image_text_conversation():\n",
     "    \"\"\"Example of having a conversation that includes both images and text\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    gen = Generator(\n",
     "        model_client=client,\n",
     "        model_kwargs={\n",
     "            \"model\": \"gpt-4o-mini\",\n",
     "            \"images\": [\n",
     "                \"https://raw.githubusercontent.com/openai/openai-cookbook/main/examples/images/happy_cat.jpg\",\n",
-    "                \"https://path/to/local/image.jpg\"  # Replace with your local image path\n",
+    "                \"https://path/to/local/image.jpg\",  # Replace with your local image path\n",
     "            ],\n",
-    "            \"max_tokens\": 300\n",
-    "        }\n",
+    "            \"max_tokens\": 300,\n",
+    "        },\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    conversation = \"\"\"<START_OF_SYSTEM_PROMPT>You are a helpful assistant skilled in analyzing images and providing detailed descriptions.</END_OF_SYSTEM_PROMPT>\n",
     "    <START_OF_USER_PROMPT>I'm showing you two images. Please analyze them and tell me what emotions they convey.</END_OF_USER_PROMPT>\"\"\"\n",
-    "    \n",
+    "\n",
     "    response = gen({\"input_str\": conversation})\n",
     "    print(\"\\n=== Mixed Image-Text Conversation ===\")\n",
-    "    print(f\"Assistant's Analysis: {response.raw_response}\")\n",
-    "\n",
-    "\n"
+    "    print(f\"Assistant's Analysis: {response.raw_response}\")"
    ]
   },
   {
@@ -2189,16 +2194,16 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "    print(\"OpenAI Image Processing Examples\\n\")\n",
-    "    \n",
+    "\n",
     "    # Basic image analysis\n",
     "    analyze_single_image()\n",
-    "    \n",
+    "\n",
     "    # Multiple image analysis\n",
     "    analyze_multiple_images()\n",
-    "    \n",
+    "\n",
     "    # Image generation\n",
     "    generate_art_with_dalle()\n",
-    "    \n",
+    "\n",
     "    # create_image_variations(<path_to_image>)\n",
     "    # edit_image_with_mask(<path_to_image>, <path_to_mask>)\n",
     "    # mixed_image_text_conversation(<conversation_prompt>)"
@@ -2230,23 +2235,27 @@
    "source": [
     "class ImageGenerator(Generator):\n",
     "    \"\"\"Generator subclass for image generation.\"\"\"\n",
+    "\n",
     "    model_type = ModelType.IMAGE_GENERATION\n",
+    "\n",
     "\n",
     "def test_vision_and_generation():\n",
     "    \"\"\"Test both vision analysis and image generation\"\"\"\n",
     "    client = OpenAIClient()\n",
-    "    \n",
+    "\n",
     "    # 1. Test Vision Analysis\n",
     "    vision_gen = Generator(\n",
     "        model_client=client,\n",
     "        model_kwargs={\n",
     "            \"model\": \"gpt-4o-mini\",\n",
     "            \"images\": \"https://upload.wikimedia.org/wikipedia/en/7/7d/Lenna_%28test_image%29.png\",\n",
-    "            \"max_tokens\": 300\n",
-    "        }\n",
+    "            \"max_tokens\": 300,\n",
+    "        },\n",
     "    )\n",
-    "    \n",
-    "    vision_response = vision_gen({\"input_str\": \"What do you see in this image? Be detailed but concise.\"})\n",
+    "\n",
+    "    vision_response = vision_gen(\n",
+    "        {\"input_str\": \"What do you see in this image? Be detailed but concise.\"}\n",
+    "    )\n",
     "    print(\"\\n=== Vision Analysis ===\")\n",
     "    print(f\"Description: {vision_response.raw_response}\")\n",
     "\n",
@@ -2257,12 +2266,14 @@
     "            \"model\": \"dall-e-3\",\n",
     "            \"size\": \"1024x1024\",\n",
     "            \"quality\": \"standard\",\n",
-    "            \"n\": 1\n",
-    "        }\n",
+    "            \"n\": 1,\n",
+    "        },\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # For image generation, input_str becomes the prompt\n",
-    "    response = dalle_gen({\"input_str\": \"A happy siamese cat playing with a red ball of yarn\"})\n",
+    "    response = dalle_gen(\n",
+    "        {\"input_str\": \"A happy siamese cat playing with a red ball of yarn\"}\n",
+    "    )\n",
     "    print(\"\\n=== DALL-E Generation ===\")\n",
     "    print(f\"Generated Image URL: {response.data}\")"
    ]
@@ -2288,10 +2299,10 @@
     "        model_kwargs={\n",
     "            \"model\": \"gpt-4o-mini\",\n",
     "            \"images\": \"https://invalid.url/nonexistent.jpg\",\n",
-    "            \"max_tokens\": 300\n",
-    "        }\n",
+    "            \"max_tokens\": 300,\n",
+    "        },\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    print(\"\\n=== Testing Invalid Image URL ===\")\n",
     "    response = gen({\"input_str\": \"What do you see in this image?\"})\n",
     "    print(f\"Response with invalid image URL: {response}\")"
@@ -2306,7 +2317,7 @@
     "if __name__ == \"__main__\":\n",
     "    print(\"Starting OpenAI Vision and DALL-E test...\\n\")\n",
     "    test_invalid_image_url()\n",
-    "    test_vision_and_generation() "
+    "    test_vision_and_generation()"
    ]
   },
   {
