create data component that wont impact the training

--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -192,7 +192,7 @@
     "from adalflow.optim.types import ParameterType\n",
     "\n",
     "\n",
-    "@adal.fun_to_component\n",
+    "@adal.func_to_component\n",
     "def parse_integer_answer(answer: str):\n",
     "    \"\"\"A function that parses the last integer from a string using regular expressions.\"\"\"\n",
     "    try:\n",
