--- a/notebooks/tutorials/adalflow_component.ipynb
+++ b/notebooks/tutorials/adalflow_component.ipynb
@@ -802,20 +802,20 @@
     }
    ],
    "source": [
-    "from adalflow.core.component import FunComponent\n",
+    "from adalflow.core.component import FuncComponent\n",
     "\n",
     "\n",
     "def add_one(x):\n",
     "    return x + 1\n",
     "\n",
     "\n",
-    "fun_component = FunComponent(add_one)\n",
+    "fun_component = FuncComponent(add_one)\n",
     "print(fun_component(1))\n",
     "print(type(fun_component))\n",
     "\n",
     "# output:\n",
     "# 2\n",
-    "# <class 'core.component.FunComponent'>"
+    "# <class 'core.component.FuncComponent'>"
    ]
   },
   {
@@ -839,9 +839,9 @@
     }
    ],
    "source": [
-    "from adalflow.core.component import fun_to_component\n",
+    "from adalflow.core.component import func_to_component\n",
     "\n",
-    "fun_component = fun_to_component(add_one)\n",
+    "fun_component = func_to_component(add_one)\n",
     "print(fun_component(1))\n",
     "print(type(fun_component))\n",
     "\n",
@@ -872,7 +872,7 @@
    ],
    "source": [
     "# use it as a decorator\n",
-    "@fun_to_component\n",
+    "@func_to_component\n",
     "def add_one(x):\n",
     "    return x + 1\n",
     "\n",
@@ -911,7 +911,7 @@
     "from adalflow.core import Sequential\n",
     "\n",
     "\n",
-    "@fun_to_component\n",
+    "@func_to_component\n",
     "def enhance_query(query: str) -> str:\n",
     "    return query + \"Please be concise and only list the top treatments.\"\n",
     "\n",
