change lightrag to adalflow, delete many outdated files

--- a/use_cases/agent/react_agent_hotpot_qa.ipynb
+++ b/use_cases/agent/react_agent_hotpot_qa.ipynb
@@ -568,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "``LightRAG`` provides a ``printc`` function. You can utilize it to show colored console output for angent."
+    "``AdalFlow`` provides a ``printc`` function. You can utilize it to show colored console output for angent."
    ]
   },
   {
@@ -699,7 +699,7 @@
     "E.g. question: Harry Potter and Dumbledore, who is older? ground truth: ``dumbledore``, pred answer: ``harry potter is older than dumbledore.``\n",
     "the model mentioned the groud truth but still provide wrong answer. So FM serves as reference.\n",
     "\n",
-    "Let's use ``LightRAG eval`` module and evaluate on 10 questions and keep the model's practice to set ``max_step`` at `7`."
+    "Let's use ``AdalFlow eval`` module and evaluate on 10 questions and keep the model's practice to set ``max_step`` at `7`."
    ]
   },
   {
@@ -1223,7 +1223,7 @@
     "2024-06-15 23:18:16 - [3230041225.py:26:<module>] - No. 9, question: Who is older, Annie Morton or Terry Richardson?, ground truth:`` terry richardson``, pred answer: ``who is older annie morton or terry richardson``\n",
     "\n",
     "Therefore, using ReAct agent outperforms the base LLM.\n",
-    "Meanwhile, ``LightRAG ReAct agent`` shows that the performance on 10 questions(EM=0.3)."
+    "Meanwhile, ``AdalFlow ReAct agent`` shows that the performance on 10 questions(EM=0.3)."
    ]
   },
   {
