--- a/use_cases/question_answering/simple_qa.ipynb
+++ b/use_cases/question_answering/simple_qa.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import needed modules from LightRAG\n",
+    "# Import needed modules from AdalFlow\n",
     "from adalflow.core.component import Component\n",
     "from adalflow.core.generator import Generator"
    ]
