--- a/use_cases/generator/intermediate.ipynb
+++ b/use_cases/generator/intermediate.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, lets prepare the imports and prompt templates using `jinjia2` template. We plan to demonstrate how we can use different models too. If this tutorial is the first thing you read, no need to care about more details, but focus on how the `development process` looks like using `LightRAG` library."
+    "First, lets prepare the imports and prompt templates using `jinjia2` template. We plan to demonstrate how we can use different models too. If this tutorial is the first thing you read, no need to care about more details, but focus on how the `development process` looks like using `AdalFlow` library."
    ]
   },
   {
@@ -560,9 +560,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openc",
+   "display_name": "my-project-kernel",
    "language": "python",
-   "name": "python3"
+   "name": "my-project-kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -574,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
