--- a/notebooks/adalflow_colab_template.ipynb
+++ b/notebooks/adalflow_colab_template.ipynb
@@ -64,9 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip uninstall httpx anyio -y\n",
-    "!pip install \"anyio>=3.1.0,<4.0\"\n",
-    "!pip install httpx==0.24.1"
+    "# !pip uninstall httpx anyio -y\n",
+    "# !pip install \"anyio>=3.1.0,<4.0\"\n",
+    "# !pip install httpx==0.24.1\n",
+    "\n",
+    "# uncomment this only if we have issues."
    ]
   },
   {
