improve the clarity and minor bug fix

--- a/notebooks/tutorials/adalflow_dataclasses.ipynb
+++ b/notebooks/tutorials/adalflow_dataclasses.ipynb
@@ -921,9 +921,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "lightrag-project",
+   "display_name": "my-project-kernel",
    "language": "python",
-   "name": "light-rag-project"
+   "name": "my-project-kernel"
   },
   "language_info": {
    "codemirror_mode": {
