minor fix on the rag colab

--- a/notebooks/use_cases/adalflow_rag_optimization.ipynb
+++ b/notebooks/use_cases/adalflow_rag_optimization.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "\n",
     "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
-    "os.environ[\"GROQ_API_KEY\"] = TOGETHER_API_KEY\n",
+    "os.environ[\"TOGETHER_API_KEY\"] = TOGETHER_API_KEY\n",
     "\n",
     "print(\"API keys have been set.\")"
    ]
