fix the tutorials since api change

--- a/notebooks/tutorials/adalflow_classification_optimization.ipynb
+++ b/notebooks/tutorials/adalflow_classification_optimization.ipynb
@@ -377,7 +377,7 @@
     "        }\n",
     "        return prompt_kwargs\n",
     "\n",
-    "    def call(\n",
+    "    def bicall(\n",
     "        self, question: str, id: Optional[str] = None\n",
     "    ) -> Union[adal.GeneratorOutput, adal.Parameter]:\n",
     "        prompt_kwargs = self._prepare_input(question)\n",
@@ -521,7 +521,7 @@
     "        )\n",
     "\n",
     "    def prepare_task(self, sample: TRECExtendedData):\n",
-    "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
+    "        return self.task.bicall, {\"question\": sample.question, \"id\": sample.id}\n",
     "\n",
     "    def prepare_eval(\n",
     "        self, sample: TRECExtendedData, y_pred: adal.GeneratorOutput\n",
