--- a/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
+++ b/notebooks/qas/adalflow_object_count_auto_optimization.ipynb
@@ -63,49 +63,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip uninstall httpx anyio -y\n",
-    "!pip install \"anyio>=3.1.0,<4.0\"\n",
-    "!pip install httpx==0.24.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "id": "nJteJKsNrpcu",
-    "outputId": "d9f7b4d0-d11c-480d-d858-bf9022c18998"
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
-      "text/plain": [
-       "'0.2.0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import adalflow as adal\n",
-    "\n",
-    "adal.__version__"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "KapUyHMM07pJ"
@@ -192,7 +149,7 @@
     "from adalflow.optim.types import ParameterType\n",
     "\n",
     "\n",
-    "@adal.func_to_component\n",
+    "@adal.func_to_data_component\n",
     "def parse_integer_answer(answer: str):\n",
     "    \"\"\"A function that parses the last integer from a string using regular expressions.\"\"\"\n",
     "    try:\n",
@@ -252,7 +209,7 @@
     "            use_cache=True,\n",
     "        )\n",
     "\n",
-    "    def call(\n",
+    "    def bicall(\n",
     "        self, question: str, id: str = None\n",
     "    ) -> Union[adal.GeneratorOutput, adal.Parameter]:\n",
     "        output = self.llm_counter(prompt_kwargs={\"input_str\": question}, id=id)\n",
@@ -441,20 +398,7 @@
     "# set it to train mode\n",
     "task_pipeline.train()\n",
     "answer = task_pipeline(question, id=\"1\")\n",
-    "print(answer)\n",
-    "print(f\"full_response: {answer.full_response}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "YDAiuFzcr4YA"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install datasets\n",
-    "clear_output()"
+    "print(answer)"
    ]
   },
   {
@@ -592,7 +536,7 @@
     "        super().__init__(task=task, eval_fn=eval_fn)\n",
     "\n",
     "    def prepare_task(self, sample: Example):\n",
-    "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
+    "        return self.task.bicall, {\"question\": sample.question, \"id\": sample.id}\n",
     "\n",
     "    def prepare_eval(self, sample: Example, y_pred: adal.GeneratorOutput) -> float:\n",
     "        y_label = -1\n",
@@ -853,7 +797,7 @@
     "        self.text_optimizer_model_config = text_optimizer_model_config\n",
     "\n",
     "    def prepare_task(self, sample: Example):\n",
-    "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
+    "        return self.task.bicall, {\"question\": sample.question, \"id\": sample.id}\n",
     "\n",
     "    def prepare_eval(self, sample: Example, y_pred: adal.GeneratorOutput) -> float:\n",
     "        y_label = -1\n",
