--- a/notebooks/tutorials/adalflow_classification_optimization.ipynb
+++ b/notebooks/tutorials/adalflow_classification_optimization.ipynb
@@ -509,7 +509,7 @@
     "        eval_fn = AnswerMatchAcc(type=\"exact_match\").compute_single_item\n",
     "        loss_fn = adal.EvalFnToTextLoss(\n",
     "            eval_fn=eval_fn,\n",
-    "            eval_fn_desc=\"exact_match: 1 if str(y) == str(y_gt) else 0\",\n",
+    "            eval_fn_desc=\"exact_match: 1 if str(y) == str(y_gt) else 0. When the LLM prediction failed with format parsing which results with errors, we set y_pred = -1\",\n",
     "        )\n",
     "        super().__init__(\n",
     "            task=task,\n",
@@ -521,7 +521,7 @@
     "        )\n",
     "\n",
     "    def prepare_task(self, sample: TRECExtendedData):\n",
-    "        return self.task.bicall, {\"question\": sample.question, \"id\": sample.id}\n",
+    "        return self.task.call, {\"question\": sample.question, \"id\": sample.id}\n",
     "\n",
     "    def prepare_eval(\n",
     "        self, sample: TRECExtendedData, y_pred: adal.GeneratorOutput\n",
@@ -534,8 +534,8 @@
     "    def prepare_loss(\n",
     "        self, sample: TRECExtendedData, y_pred: adal.Parameter, *args, **kwargs\n",
     "    ) -> Tuple[Callable[..., Any], Dict]:\n",
-    "        full_response = y_pred.full_response\n",
-    "        y_label = -1\n",
+    "        full_response = y_pred.data\n",
+    "        y_label = -1  # default value for failed prediction\n",
     "        if (\n",
     "            full_response\n",
     "            and full_response.data is not None\n",
@@ -550,7 +550,11 @@
     "            eval_input=sample.class_name,\n",
     "            requires_opt=False,\n",
     "        )\n",
-    "        return self.loss_fn, {\"kwargs\": {\"y\": y_pred, \"y_gt\": y_gt}}"
+    "        return self.loss_fn, {\n",
+    "            \"kwargs\": {\"y\": y_pred, \"y_gt\": y_gt},\n",
+    "            \"id\": sample.id,\n",
+    "            \"gt\": y_gt.eval_input,\n",
+    "        }"
    ]
   },
   {
@@ -625,7 +629,8 @@
     "        print(\"Starting model training...\")\n",
     "        trainer.fit(\n",
     "            train_dataset=train_dataset,\n",
-    "            val_dataset=test_dataset,\n",
+    "            val_dataset=val_dataset,\n",
+    "            test_dataset=test_dataset,\n",
     "            debug=debug,\n",
     "        )\n",
     "        print(\"Training completed successfully\")\n",
