--- a/notebooks/integration/fireworks_integration.ipynb
+++ b/notebooks/integration/fireworks_integration.ipynb
@@ -21,7 +21,9 @@
     "This notebook was created by [Nicholas Fleischauer](https://www.linkedin.com/in/unobtainiumrock/).\n",
     "\n",
     "### Outline\n",
-    "We will explore the usage of AdalFlow’s `FireworksClient` integration. \n",
+    "\n",
+    "* Install AdalFlow\n",
+    "* Use Fireworks API in AdalFlow generator\n",
     "\n",
     "Start by setting up your `Fireworks AI` account and obtaining your API key at [here](https://fireworks.ai/login).  \n"
    ]
@@ -63,17 +65,11 @@
     }
    ],
    "source": [
-    "import os\n",
     "from getpass import getpass\n",
+    "import os\n",
     "\n",
-    "from adalflow.components.model_client.fireworks_client import FireworksClient\n",
-    "from adalflow.core import Generator\n",
-    "from adalflow.utils import setup_env, get_logger\n",
-    "\n",
-    "# Prompt user to enter their API keys securely\n",
     "FIREWORKS_API_KEY = getpass(\"Please enter your Mistral API key:\")\n",
     "\n",
-    "# Set env variables\n",
     "os.environ[\"FIREWORKS_API_KEY\"] = FIREWORKS_API_KEY\n",
     "\n",
     "print(\"API keys have been set.\")"
@@ -81,64 +77,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Fireworks] LLM output:\n",
-      "Welcome to Fireworks AI!\n",
-      "\n",
-      "Quantum mechanics is a branch of physics that studies the behavior of matter and energy at an atomic and subatomic level. It's a mind-bending concept that challenges our classical understanding of the world. Here's a simplified summary:\n",
-      "\n",
-      "**Main principles:**\n",
-      "\n",
-      "1. **Wave-particle duality**: Quantum objects, like electrons, can exhibit both wave-like and particle-like behavior depending on how they're observed.\n",
-      "2. **Uncertainty principle**: It's impossible to know certain properties of a quantum object, like position and momentum, simultaneously with infinite precision.\n",
-      "3. **Superposition**: Quantum objects can exist in multiple states simultaneously, like spinning both clockwise and counterclockwise at the same time.\n",
-      "4. **Entanglement**: Quantum objects can become connected, allowing their properties to be correlated, even when separated by large distances.\n",
-      "5. **Quantization**: Energy comes in discrete packets (quanta), rather than being continuous.\n",
-      "\n",
-      "**Key implications:**\n",
-      "\n",
-      "1. **Probabilistic nature**: Quantum mechanics is based on probabilities rather than definite outcomes.\n",
-      "2. **Non-locality**: Quantum objects can instantaneously affect each other, regardless of distance.\n",
-      "3. **Quantum computing**: Quantum mechanics forms the foundation for quantum computing, which uses quantum-mechanical phenomena to perform calculations and operations.\n",
-      "\n",
-      "**Real-world applications:**\n",
-      "\n",
-      "1. **Transistors**: The building blocks of modern electronics, transistors rely on quantum mechanics to control the flow of electrical current.\n",
-      "2. **Lasers**: Quantum mechanics is responsible for the operation of lasers, which rely on the stimulated emission of photons.\n",
-      "3. **Magnetic Resonance Imaging (MRI)**: MRI machines use quantum mechanics to create detailed images of the body.\n",
-      "4. **Cryptography**: Quantum mechanics is used to develop secure encryption methods, like quantum key distribution.\n",
-      "\n",
-      "This is just a brief introduction to the fascinating world of quantum mechanics. If you have specific questions or topics you'd like me to expand on, feel free to ask!\n"
+     "ename": "ValueError",
+     "evalue": "Environment variable FIREWORKS_API_KEY must be set",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01madalflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcomponents\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_client\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FireworksClient\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01madalflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01madal\u001b[39;00m\n\u001b[1;32m      4\u001b[0m generator \u001b[38;5;241m=\u001b[39m adal\u001b[38;5;241m.\u001b[39mGenerator(\n\u001b[0;32m----> 5\u001b[0m     model_client\u001b[38;5;241m=\u001b[39m\u001b[43mFireworksClient\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[1;32m      6\u001b[0m     model_kwargs\u001b[38;5;241m=\u001b[39m{\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccounts/fireworks/models/llama-v3p1-8b-instruct\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemperature\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.7\u001b[39m,\n\u001b[1;32m      9\u001b[0m     },\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Provide a single prompt string\u001b[39;00m\n\u001b[1;32m     13\u001b[0m prompt_kwargs \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minput_str\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello from Fireworks AI! Can you summarize the concept of quantum mechanics?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     15\u001b[0m }\n",
+      "File \u001b[0;32m~/Documents/test/LightRAG/adalflow/adalflow/utils/lazy_import.py:171\u001b[0m, in \u001b[0;36mLazyImport.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    169\u001b[0m log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCreating class instance: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclass_\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    170\u001b[0m \u001b[38;5;66;03m# normal class initialization\u001b[39;00m\n\u001b[0;32m--> 171\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclass_\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/test/LightRAG/adalflow/adalflow/components/model_client/fireworks_client.py:47\u001b[0m, in \u001b[0;36mFireworksClient.__init__\u001b[0;34m(self, api_key, chat_completion_parser, input_type, base_url, env_api_key_name)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     41\u001b[0m     api_key: Optional[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     45\u001b[0m     env_api_key_name: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFIREWORKS_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     46\u001b[0m ):\n\u001b[0;32m---> 47\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m        \u001b[49m\u001b[43mapi_key\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mapi_key\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m        \u001b[49m\u001b[43mchat_completion_parser\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchat_completion_parser\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m        \u001b[49m\u001b[43minput_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minput_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbase_url\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbase_url\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[43m        \u001b[49m\u001b[43menv_api_key_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43menv_api_key_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/test/LightRAG/adalflow/adalflow/components/model_client/openai_client.py:180\u001b[0m, in \u001b[0;36mOpenAIClient.__init__\u001b[0;34m(self, api_key, chat_completion_parser, input_type, base_url, env_api_key_name)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_env_api_key_name \u001b[38;5;241m=\u001b[39m env_api_key_name\n\u001b[1;32m    179\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase_url \u001b[38;5;241m=\u001b[39m base_url\n\u001b[0;32m--> 180\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msync_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minit_sync_client\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    181\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39masync_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m  \u001b[38;5;66;03m# only initialize if the async call is called\u001b[39;00m\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchat_completion_parser \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    183\u001b[0m     chat_completion_parser \u001b[38;5;129;01mor\u001b[39;00m get_first_message_content\n\u001b[1;32m    184\u001b[0m )\n",
+      "File \u001b[0;32m~/Documents/test/LightRAG/adalflow/adalflow/components/model_client/openai_client.py:191\u001b[0m, in \u001b[0;36mOpenAIClient.init_sync_client\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    189\u001b[0m api_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_api_key \u001b[38;5;129;01mor\u001b[39;00m os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_env_api_key_name)\n\u001b[1;32m    190\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m api_key:\n\u001b[0;32m--> 191\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    192\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnvironment variable \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_env_api_key_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be set\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    193\u001b[0m     )\n\u001b[1;32m    194\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m OpenAI(api_key\u001b[38;5;241m=\u001b[39mapi_key, base_url\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase_url)\n",
+      "\u001b[0;31mValueError\u001b[0m: Environment variable FIREWORKS_API_KEY must be set"
      ]
     }
    ],
    "source": [
-    "client = FireworksClient()\n",
+    "from adalflow.components.model_client import FireworksClient\n",
+    "import adalflow as adal\n",
     "\n",
-    "# Create the Generator with Fireworks client\n",
-    "generator = Generator(\n",
-    "    model_client=client,\n",
+    "generator = adal.Generator(\n",
+    "    model_client=FireworksClient(),\n",
     "    model_kwargs={\n",
     "        \"model\": \"accounts/fireworks/models/llama-v3p1-8b-instruct\",\n",
     "        \"temperature\": 0.7,\n",
     "    },\n",
     ")\n",
     "\n",
-    "# Provide a single prompt string\n",
     "prompt_kwargs = {\n",
     "    \"input_str\": \"Hello from Fireworks AI! Can you summarize the concept of quantum mechanics?\"\n",
     "}\n",
     "\n",
-    "# Generate a response\n",
     "response = generator(prompt_kwargs)\n",
     "\n",
-    "# Inspect/print the result\n",
     "if response.error:\n",
     "    print(f\"[Fireworks] Generator error: {response.error}\")\n",
     "else:\n",
@@ -163,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
