--- a/notebooks/integration/mistral_integration.ipynb
+++ b/notebooks/integration/mistral_integration.ipynb
@@ -44,20 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from getpass import getpass\n",
-    "\n",
-    "from adalflow.components.model_client import MistralClient\n",
-    "from adalflow.core import Generator\n",
-    "from adalflow.utils import setup_env, get_logger"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -81,10 +67,11 @@
     }
    ],
    "source": [
-    "# Prompt user to enter their API keys securely\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
     "MISTRAL_API_KEY = getpass(\"Please enter your Mistral API key:\")\n",
     "\n",
-    "# Set env variables\n",
     "os.environ[\"MISTRAL_API_KEY\"] = MISTRAL_API_KEY\n",
     "\n",
     "print(\"API keys have been set.\")"
@@ -123,10 +110,11 @@
     }
    ],
    "source": [
-    "client = MistralClient()\n",
+    "from adalflow.components.model_client import MistralClient\n",
+    "import adalflow as adal\n",
     "\n",
-    "generator = Generator(\n",
-    "    model_client=client,\n",
+    "generator = adal.Generator(\n",
+    "    model_client=MistralClient(),\n",
     "    model_kwargs={\n",
     "        \"model\": \"mistral-large-latest\",\n",
     "        \"temperature\": 0.7,\n",
@@ -136,10 +124,8 @@
     "\n",
     "prompt_kwargs = {\"input_str\": \"Explain the concept of machine learning.\"}\n",
     "\n",
-    "# Call the generator\n",
     "response = generator(prompt_kwargs)\n",
     "\n",
-    "# Check and print the result\n",
     "if response.error:\n",
     "    print(f\"[Mistral] Generator Error: {response.error}\")\n",
     "else:\n",
