--- a/notebooks/integration/sambanova_integration.ipynb
+++ b/notebooks/integration/sambanova_integration.ipynb
@@ -44,19 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from getpass import getpass\n",
-    "\n",
-    "from adalflow.components.model_client.sambanova_client import SambaNovaClient\n",
-    "from adalflow.core import Generator"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,10 +67,11 @@
     }
    ],
    "source": [
-    "# Prompt user to enter their API keys securely\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
     "SAMBANOVA_API_KEY = getpass(\"Please enter your Mistral API key:\")\n",
     "\n",
-    "# Set env variables\n",
     "os.environ[\"SAMBANOVA_API_KEY\"] = SAMBANOVA_API_KEY\n",
     "\n",
     "print(\"API keys have been set.\")"
@@ -104,12 +92,11 @@
     }
    ],
    "source": [
-    "# Create the SambaNova client\n",
-    "client = SambaNovaClient()\n",
+    "from adalflow.components.model_client.sambanova_client import SambaNovaClient\n",
+    "from adalflow.core import Generator\n",
     "\n",
-    "# Create a Generator with that client\n",
     "generator = Generator(\n",
-    "    model_client=client,\n",
+    "    model_client=SambaNovaClient(),\n",
     "    model_kwargs={\n",
     "        \"model\": \"Meta-Llama-3.1-8B-Instruct\",\n",
     "        \"temperature\": 0.7,\n",
@@ -120,10 +107,8 @@
     "# Provide a single prompt\n",
     "prompt_kwargs = {\"input_str\": \"Just say hi and hello world and nothing else.\"}\n",
     "\n",
-    "# Generate a response\n",
     "response = generator(prompt_kwargs)\n",
     "\n",
-    "# Inspect/print the result\n",
     "if response.error:\n",
     "    print(f\"[SambaNova] Generator error: {response.error}\")\n",
     "else:\n",
