--- a/notebooks/integration/xai_integration.ipynb
+++ b/notebooks/integration/xai_integration.ipynb
@@ -49,22 +49,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from getpass import getpass\n",
-    "\n",
-    "from adalflow.components.model_client import XAIClient\n",
-    "\n",
-    "# from adalflow.components.model_client.xai_clientimport XAIClient\n",
-    "from adalflow.core import Generator\n",
-    "from adalflow.utils import setup_env, get_logger"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -77,10 +61,11 @@
     }
    ],
    "source": [
-    "# Prompt user to enter their API keys securely\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
     "XAI_API_KEY = getpass(\"Please enter your xAI API key:\")\n",
     "\n",
-    "# Set env variables\n",
     "os.environ[\"XAI_API_KEY\"] = XAI_API_KEY\n",
     "\n",
     "print(\"API keys have been set.\")"
@@ -100,11 +85,11 @@
     }
    ],
    "source": [
-    "client = XAIClient()\n",
+    "from adalflow.components.model_client import XAIClient\n",
+    "from adalflow.core import Generator\n",
     "\n",
-    "# Create the generator\n",
     "generator = Generator(\n",
-    "    model_client=client,\n",
+    "    model_client=XAIClient(),\n",
     "    model_kwargs={\n",
     "        \"model\": \"grok-2-latest\",\n",
     "        \"temperature\": 0,\n",
@@ -112,13 +97,11 @@
     "    },\n",
     ")\n",
     "\n",
-    "# Provide a single prompt string\n",
     "prompt_kwargs = {\"input_str\": \"Testing. Just say hi and hello world and nothing else.\"}\n",
     "\n",
     "# Call the generator\n",
     "response = generator(prompt_kwargs)\n",
     "\n",
-    "# Inspect/print the result\n",
     "if response.error:\n",
     "    print(f\"[xAI] Generator Error: {response.error}\")\n",
     "else:\n",
