redo documentation theme to furo which is more modern, redo the main page, delete the get started

--- a/notebooks/integration/adalflow_together_deepseek_r1.ipynb
+++ b/notebooks/integration/adalflow_together_deepseek_r1.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 😇 Have the fun\n",
+    "# 😇 Have fun\n",
     "\n",
     "Let's get started!  🚀\n",
     "\n"
