fix: update notebook to work with kw-only args in localdb.transform

--- a/notebooks/tutorials/adalflow_rag_playbook.ipynb
+++ b/notebooks/tutorials/adalflow_rag_playbook.ipynb
@@ -172,7 +172,7 @@
     "    db = LocalDB()\n",
     "    db.load(docs)\n",
     "    data_transformer = prepare_data_pipeline()\n",
-    "    db.transform(data_transformer, key=\"data_transformer\")\n",
+    "    db.transform(transformer=data_transformer, key=\"data_transformer\")\n",
     "    db.save_state(index_path)"
    ]
   },
