remove all funccomponent and func_to_component

--- a/notebooks/tutorials/adalflow_component.ipynb
+++ b/notebooks/tutorials/adalflow_component.ipynb
@@ -923,9 +923,9 @@
     }
    ],
    "source": [
-    "from adalflow.core.component import func_to_component\n",
+    "from adalflow.core.component import func_to_data_component\n",
     "\n",
-    "fun_component = func_to_component(add_one)\n",
+    "fun_component = func_to_data_component(add_one)\n",
     "print(fun_component(1))\n",
     "print(type(fun_component))\n",
     "\n",
@@ -959,7 +959,7 @@
    ],
    "source": [
     "# use it as a decorator\n",
-    "@func_to_component\n",
+    "@func_to_data_component\n",
     "def add_one(x):\n",
     "    return x + 1\n",
     "\n",
@@ -1004,7 +1004,7 @@
     "from adalflow.core import Sequential\n",
     "\n",
     "\n",
-    "@func_to_component\n",
+    "@func_to_data_component\n",
     "def enhance_query(query: str) -> str:\n",
     "    return query + \"Please be concise and only list the top treatments.\"\n",
     "\n",
@@ -1076,9 +1076,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "lightrag-project",
+   "display_name": "my-project-kernel",
    "language": "python",
-   "name": "light-rag-project"
+   "name": "my-project-kernel"
   },
   "language_info": {
    "codemirror_mode": {
