--- a/notebooks/tutorials/adalflow_rag_optimization.ipynb
+++ b/notebooks/tutorials/adalflow_rag_optimization.ipynb
@@ -150,7 +150,7 @@
     "from adalflow.core.types import RetrieverOutput\n",
     "from adalflow.core import Component, Generator\n",
     "from adalflow.core.retriever import Retriever\n",
-    "from adalflow.core.component import func_to_component\n",
+    "from adalflow.core.component import func_to_data_component\n",
     "from adalflow.components.model_client.openai_client import OpenAIClient"
    ]
   },
