fix the timeout issue in waiting for response

--- a/notebooks/integration/ollama.ipynb
+++ b/notebooks/integration/ollama.ipynb
@@ -64,6 +64,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo apt-get install -y pciutils\n",
+    "!curl -fsSL https://ollama.com/install.sh | sh # download ollama api\n",
+    "\n",
+    "\n",
+    "# Create a Python script to start the Ollama API server in a separate thread\n",
+    "\n",
+    "import os\n",
+    "import threading\n",
+    "import subprocess\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "def ollama():\n",
+    "    os.environ['OLLAMA_HOST'] = '0.0.0.0:11434'\n",
+    "    os.environ['OLLAMA_ORIGINS'] = '*'\n",
+    "    subprocess.Popen([\"ollama\", \"serve\"])\n",
+    "\n",
+    "ollama_thread = threading.Thread(target=ollama)\n",
+    "ollama_thread.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama pull gpt-oss:20b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama pull qwen2:0.5b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
